[package]
name = "exampes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[[bin]]
name="ctrlflow"
path="controlflow/main.rs"


[[bin]]
name="structenum"
path="structenum/main.rs"

[[bin]]
name="generics"
path="generics/main.rs"