[package]
name = "exampes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[[bin]]
name="ctrlflow"
path="controlflow/main.rs"


[[bin]]
name="structenum"
path="structenum/main.rs"

[[bin]]
name="generics"
path="generics/main.rs"

[[bin]]
name="option"
path="option/main.rs"

[[bin]]
name="result"
path="result/main.rs"

[[bin]]
name="qmark"
path="questionmark/main.rs"

[[bin]]
name="trait"
path="trait/main.rs"

[[bin]]
name="impltrait"
path="trait/impl_trait.rs"

[[bin]]
name="vec-traits"
path="trait/vec_traits.rs"

[[bin]]
name="iterator"
path="iterator/main.rs"

[[bin]]
name="dyn-dis"
path="trait/dyn_dispatch.rs"

[[bin]]
name="collection"
path="collections/main.rs"

[[bin]]
name="convert"
path="convert/main.rs"

[[bin]]
name="rc"
path="rc/main.rs"

[[bin]]
name="rc1"
path="rc/cons.rs"

[[bin]]
name="refcell"
path="refcell/main.rs"

[[bin]]
name="arc"
path="arc/main.rs"