[package]
name = "kvserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
prost = "0.11"
dashmap = "5.4.0"
thiserror = "1.0.40"
tokio = "1.28.1"

[build-dependencies]
prost-build = "0.11.8"
